--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
-[package]
-name = "ferry-rs"
-description = "A client-server command line application to transfer files and folders. Blazing fast."
-version = "0.1.0"
+[workspace]
+members = ["ferry-core", "ferry-cli"]
+resolver = "2"
 
-[dependencies]
-clap = { version = "4.5", features = ["derive"] }
+[workspace.package]
+edition = "2024"
+version = "0.1.0"
+license = "MIT"
+
+[workspace.dependencies]
 anyhow = "1"
 log = "0.4"
