--- a/ferry-cli/Cargo.toml
+++ b/ferry-cli/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ferry-rs"
+name = "ferry"
 description = "A client-server command line application to transfer files and folders. Blazing fast."
 version = "0.1.0"
 edition = "2024"
